Removing indexing/querying logic from the project